corrects minor stuff to compile document

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -523,3 +523,10 @@ author = "Matsui, Akihiko",
   year={2018},
   publisher={Nature Publishing Group}
 }
+
+@book{nowak2006evolutionary,
+   title={Evolutionary dynamics: exploring the equations of life},
+   author={Nowak, Martin A},
+   year={2006},
+   publisher={Harvard university press}
+ }
