--- a/main.tex
+++ b/main.tex
@@ -417,7 +417,7 @@ cases the strategy is not trying to extort its opponents.
 
 \subsection{Limitations of memory size} %TODO check that this is a good title
 
-The other main finding presented in~\cite{Press20212} was that
+The other main finding presented in~\cite{Press2012} was that
 short memory of the strategies was all that was needed.
 We argue that the second limitation of ZDs in multi opponent
 interactions is that of their restricted memory.
@@ -540,8 +540,8 @@ also the distribution of the population.  Thus for every value of \(K\) there is
 a different best response player.
 
 Considering the dynamic best response player as a vector
-\\(p\in\mathbb{R}^4_{[0, 1]}\\) and the opponent as a vector
-\\(q\in\mathbb{R}^4_{[0, 1]}\\).
+\(p\in\mathbb{R}^4_{[0, 1]}\) and the opponent as a vector
+\(q\in\mathbb{R}^4_{[0, 1]}\).
 In the case of the best response player the transition probabilities depend on
 the payoff matrix \(A ^ {(K)}\) where:
 
