adds to the response

--- a/response/main.tex
+++ b/response/main.tex
@@ -16,8 +16,8 @@ memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
 
 We would like to open this response by thanking the reviewers for their
 thoughtful comments and suggestions. We have fully taken their comments on board
-and made significant modifications to both the mathematical arguments and the
-narrative. We feel this has greatly improved the work.
+and made significant modifications and additions to the manuscript.
+We feel this has greatly improved the work.
 
 Both reviewers commented on different aspects of the paper and so our
 modifications naturally fit in to two categories (which we will discuss in
@@ -25,10 +25,14 @@ detail comment by comment):
 
 \begin{itemize}
     \item The first reviewer suggested that the manuscript lacked discussion of
-    the literature on the theory of mind. We address this by discussing relevant
-    literature in the introduction.
+    noise and of the literature on the theory of mind and of noise. We address
+    this including noise in our formulation (in the appendix) and by discussing
+    relevant literature on the theory of mind (in the introduction).
     \item The second reviewer questioned the claims on the evolutionary
-    stability of the best response and the language of the manuscript.
+    stability of the best response and expressed that the manuscript would
+    benefit from such experiments and discussion. We have included an example of
+    how our formulation can be used in evolutionary processes, more
+    specifically in a Moran process.
 \end{itemize}
 
 We will now take each comment of the reviewers in turn and highlight our efforts
@@ -48,8 +52,8 @@ to improve the work.
 \end{verbatim}
 
 We agree with the reviewer that noise is an important aspect of research. Noise
-is not included in our manuscript, but following the reviewers comment we have
-inlcuded a discussion on noise.
+is not included in our manuscript, but following the reviewers comment we
+demonstrate, in the appendix, how noise can be incooporated in our formulation.
 
 \begin{verbatim}
     ``The paper lacks sufficient discussion of previous works, especially regarding
@@ -70,7 +74,10 @@ that have been proposed by the reviewer.
     as a corollary to Theorem 1, and leave all details and Figure 4 to the appendix.''
 \end{verbatim}
 
-We have made this suggested change.
+We have made changes in order to improved the narative. This includes moving
+Section 1.2 to the appendix, changing the orders of our results and removing
+the discussion of tournaments with self interactions from the "limitations
+of extortionate behaviour" section.
 
 \begin{verbatim}
     On that note, the lack of evolutionary results is somewhat disappointing,
