Addressing minor comment from the reviewers (#77)
* moves "stability of defection" to appendix

* fixes citation style

* delete previous response to reviewers

* adds response to reviewers

These are just notes

* adds discussion on theory of mind literature

* adds equations with noise

* adds to the response

* compile

Co-authored-by: Nikoleta-v3 <glynatsi@dynosob003.evolbio.mpg.de>

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -453,7 +453,7 @@ author = "Matsui, Akihiko",
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@software{nikoleta_glynatsi_2019,
+@article{nikoleta_glynatsi_2019,
   author       = {Nikoleta E. Glynatsi and
                   Vince Knight},
   title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
@@ -530,3 +530,75 @@ author = "Matsui, Akihiko",
    year={2006},
    publisher={Harvard university press}
  }
+%%%%THEORY OF MIND DEFITION%%%%%
+@article{Premack1978,
+  title={Does the chimpanzee have a theory of mind?},
+  author={Premack, David and Woodruff, Guy},
+  journal={Behavioral and brain sciences},
+  volume={1},
+  number={4},
+  pages={515--526},
+  year={1978},
+  publisher={Cambridge University Press}
+}
+@misc{Saxe2006,
+  title={The neuroscience of theory of mind},
+  author={Saxe, Rebecca and Baron-Cohen, Simon},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+@article{Wellman2011,
+  title={Developing a theory of mind.},
+  author={Wellman, Henry M},
+  year={2011},
+  publisher={Wiley-Blackwell}
+}
+%%%%%%%MANUSCRIPTS PROPOSED BY REVIEWER%%%%%%%%%%%
+@article{Han2011,
+  title={Intention recognition promotes the emergence of cooperation},
+  author={Han The Anh and Moniz Pereira, Lu{\'\i}s and Santos, Francisco C},
+  journal={Adaptive Behavior},
+  volume={19},
+  number={4},
+  pages={264--279},
+  year={2011},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@article{Han2012,
+  title={Corpus-based intention recognition in cooperation dilemmas},
+  author={Han, The Anh and Pereira, Luis Moniz and Santos, Francisco C},
+  journal={Artificial Life},
+  volume={18},
+  number={4},
+  pages={365--383},
+  year={2012},
+  publisher={MIT Press}
+}
+@article{Devaine2014,
+  title={Theory of mind: did evolution fool us?},
+  author={Devaine, Marie and Hollard, Guillaume and Daunizeau, Jean},
+  journal={PloS One},
+  volume={9},
+  number={2},
+  pages={e87619},
+  year={2014},
+  publisher={Public Library of Science}
+}
+@article{De2013,
+  title={How much does it help to know what she knows you know? An agent-based simulation study},
+  author={De Weerd, Harmen and Verbrugge, Rineke and Verheij, Bart},
+  journal={Artificial Intelligence},
+  volume={199},
+  pages={67--92},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{Han2015,
+  title={Synergy between intention recognition and commitments in cooperation dilemmas},
+  author={Han, The Anh and Santos, Francisco C and Lenaerts, Tom and Pereira, Luis Moniz},
+  journal={Scientific reports},
+  volume={5},
+  pages={9312},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
