--- a/main.tex
+++ b/main.tex
@@ -58,9 +58,9 @@ of extortion and restricted memory.}
 \begin{abstract}
     Memory-one strategies are a set of Iterated Prisoner's Dilemma strategies
     that have been praised for their mathematical tractability and performance
-    against single opponents. This manuscript investigates a theory of mind: \textit{best
-    response} memory-one strategies, as a multidimensional
-    optimisation problem. We add to the literature that has shown that
+    against single opponents. This manuscript investigates
+    \textit{best response} memory-one strategies with a theory of mind about
+    their opponents. Our results add to the literature that has shown that
     extortionate play is not always optimal by showing that optimal play is
     often not extortionate.
     We
@@ -113,26 +113,28 @@ interactions, however, their true effectiveness in tournaments and
 evolutionary dynamics has been questioned~\cite{adami2013, Hilbe2013b,
 Hilbe2013, Hilbe2015, Knight2018, Harper2015}.
 
-In~\cite{Press2012} the authors stated that ``Only a player with a theory of
-mind about his opponent can do better, in which case Iterated Prisoner's Dilemma
-is an Ultimatum Game''. The purpose of this work is to investigate the first
-part of this sentence, more specifically, to identify the best response strategy
-with a theory of mind of a given group of opponents. The outcomes of our work
-reinforce known results, namely that memory-one strategies must be forgiving to
-be evolutionarily stable~\cite{Stewart2013, Stewart2016} and that longer-memory
-strategies have a certain form of advantage over short memory
-strategies~\cite{Hilbe2017, Pan2015}.
+The purpose of this work is to reinforce the literature on the limitations of
+extortionate strategies by considering new approaches. More specifically, by
+considering best response memory-one strategies with a theory of mind about
+their opponents. There are several works in the literature that have considered
+strategies with a theory of mind~\cite{Han2011, Han2012, De2013, Devaine2014,
+Stewart2012, Press2012}. These works defined ``theory of mind'' as intention
+recognition~\cite{Han2011, Han2012, De2013, Devaine2014} and as the ability of a
+strategy to realise that their actions can influence
+opponents~\cite{Stewart2012}. Compared to these works, theory of mind is defined
+here as the ability of a strategy to know the behaviour of their opponents
+and alter their own behaviour in response to that.
 
-In particular, this work presents a closed form algebraic expression for the utility
-of a memory-one strategy against a given set of opponents, a compact method of
-identifying it's best response to that given set of opponents essentially: a theory
-of mind. The aim is
-to evaluate whether a best response memory-one strategy behaves in a
-zero-determinant way which in turn indicates whether it can be extortionate. We
-do this using a linear algebraic approach presented in~\cite{Knight2019}.
-This is done in tournaments with and without self interactions. Moreover, we
-introduce a framework that allows the comparison of an optimal
-memory-one strategy and an optimised strategy which has a larger memory.
+This work presents a closed form algebraic expression for the utility of a
+memory-one strategy against a given set of opponents, a compact method of
+identifying it's best response to that given set of opponents essentially: a
+theory of mind. The aim is to evaluate whether a best response memory-one
+strategy behaves in a zero-determinant way which in turn indicates whether it
+can be extortionate. We do this using a linear algebraic approach presented
+in~\cite{Knight2019}. This is done in tournaments with and without self
+interactions. Moreover, we introduce a framework that allows the comparison of
+an optimal memory-one strategy and an optimised strategy which has a larger
+memory.
 
 To illustrate the analytical results obtained in this manuscript a number of
 numerical experiments are run. The source code for these experiments has been
@@ -633,49 +635,8 @@ Note that Theorem~\ref{memone_group_best_response} which does not only have game
 novelty, but also the mathematical novelty of solving quadratic ratio optimisation
 problems where the quadratics are non concave.
 
-Moreover Theorem~\ref{theorem_one}, allows us to
-obtain a condition for which in an environment of memory-one opponents
-defection is the stable choice, based only on the coefficients of the opponents,
-as stated in Lemma~\ref{lemma:stability_of_defection}.
-
-\begin{lemma}\label{lemma:stability_of_defection}
-    In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
-    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
-    defection is stable if the transition probabilities of the
-    opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
-
-    \begin{equation}\label{eq:defection_condition_one}
-        \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
-    \end{equation}
-
-    while,
-
-    \begin{equation}\label{eq:defection_condition_two}
-        \sum_{i=1} ^ N \bar{a}^{(i)} \neq 0
-    \end{equation}
-\end{lemma}
-
-The proof of Lemma~\ref{lemma:stability_of_defection} is given in
-Appendix~\ref{subsection:stability_defection} and a numerical simulation
-demonstrating the result is given
-in Fig.~\ref{fig:stability_of_defection}.
-
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
-    \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
-    $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
-    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
-    Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
-    population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
-    $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
-    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
-    and Defector does not take over the population.
-    These results have been obtained by using~\cite{axelrodproject} an open
-    source research framework for the study of the IPD.}\label{fig:stability_of_defection}
-\end{figure}
-
-The empirical results have shown that the performance of memory-one strategies rely on adaptability and not on extortion,
+The empirical results have shown that the performance and the evolutionary
+stability of memory-one strategies rely on adaptability and not on extortion,
 and that memory-one strategies' performance is limited by their memory in cases
 where they interact with multiple opponents.
 
@@ -1033,22 +994,34 @@ The set \(S_q\) is defined as all the possible combinations of:
     from $S_q$ for which the utility is maximised.
 \end{proof}
 
-\section{Lemma~\ref{lemma:stability_of_defection} Proof}\label{section:stability_defection}
+\subsection{Stability of defection}
 
-In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
-for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
-defection is stable if the transition probabilities of the
-opponents satisfy conditions Equation~(\ref{eq:defection_condition_one}) and Equation~(\ref{eq:defection_condition_two}).
+An additional theoretical result that is possible to obtain due to
+Theorem~\ref{theorem_one}, is a condition for which in an
+environment of memory-one opponents defection is the stable choice, based only
+on the coefficients of the opponents.
 
-\begin{equation}\label{eq:defection_condition_one}
-    \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
-\end{equation}
+This result is obtained by evaluating the sign of Equation
+(\ref{eq:tournament_utility})'s derivative at \(p=(0, 0, 0, 0)\). If at that
+point the derivative is negative, then the utility of a player only decreases if
+they were to change their behaviour, and thus defection at that point is stable.
 
-while,
+\begin{lemma}\label{lemma:stability_of_defection}
+    In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
+    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
+    defection is stable if the transition probabilities of the
+    opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
 
-\begin{equation}\label{eq:defection_condition_two}
-    \sum_{i=1} ^ N \bar{a}^{(i)} \neq 0
-\end{equation}
+    \begin{equation}\label{eq:defection_condition_one}
+        \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
+    \end{equation}
+
+    while,
+
+    \begin{equation}\label{eq:defection_condition_two}
+        \sum_{i=1} ^ N \bar{a}^{(i)} \neq 0
+    \end{equation}
+\end{lemma}
 
 \begin{proof}
     For defection to be stable the derivative of the utility
@@ -1078,5 +1051,74 @@ while,
     Thus the sign of the derivative is negative if and only if
     \( \displaystyle\sum_{i=1} ^ N (c^{(i)} \bar{a}^{(i)} - \bar{c}^{(i)} a^{(i)}) \leq 0\).
 \end{proof}
+
+A numerical simulation demonstrating the result is given in Fig.~\ref{fig:stability_of_defection}.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
+    \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
+    $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
+    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
+    Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
+    population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
+    $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
+    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
+    and Defector does not take over the population.
+    These results have been obtained by using~\cite{axelrodproject} an open
+    source research framework for the study of the IPD.}\label{fig:stability_of_defection}
+\end{figure}
+
+\subsection{Best response memory-one strategy in environments with noise}
+
+Noise or error (in implementing a move, e.g. due to trembling hand or fuzzy
+mind) is a crucial aspect in the context of the IPD. Given that noise is
+unavoidable in real-world applications of the IPD, it’s therefore important
+to take them into account.
+
+Noise is the probability \(p_n\) that an error occured in a players actions,
+thus the players \(p\) and \(q\) are now given by:
+
+\[p = (p_1 (1 - p_n), p_2 (1 - p_n), p_3 (1 - p_n), p_4 (1 - p_n))\]
+
+and 
+
+\[q = (q_1 (1 - p_n), q_2 (1 - p_n), q_3 (1 - p_n), q_4 (1 - p_n))\]
+
+and the utility \(u_q(p)\) in an environment with noise is given by:
+
+\begin{equation}\label{eq:utility_with_noise}
+    u_q(p) = \frac{\frac{1}{2}pQp^T + cp + a}
+                {\frac{1}{2}p\bar{Q}p^T + \bar{c}p + \bar{a}},
+\end{equation}
+where \(Q, \bar{Q}\) \(\in \R^{4\times4}\) are square matrices defined by the
+transition probabilities of the opponent \(q_1, q_2, q_3, q_4\) as follows:
+
+\begin{center}
+\begin{equation*}
+\resizebox{\linewidth}{!}{\arraycolsep=2.5pt%
+\boldmath\(
+Q = \input{tex/q_numerator_with_noise}\)},
+\end{equation*}
+\begin{equation*}\label{eq:q_bar_matrix}
+\resizebox{\linewidth}{!}{\arraycolsep=2.5pt%
+\boldmath\(
+\bar{Q} =  \input{tex/q_denominator_with_noise}\)}.
+\end{equation*}
+\end{center}
+
+\(c \text{ and } \bar{c}\) \(\in \R^{4 \times 1}\) are similarly defined by:
+
+\begin{equation}\label{eq:q_matrix_numerator}
+\resizebox{0.7\linewidth}{!}{\arraycolsep=2.5pt%
+\boldmath\(c = \input{tex/c_numerator_with_noise}\),}
+\end{equation}
+\begin{equation}\label{eq:q_matrix_denominator}
+\resizebox{0.4\linewidth}{!}{\arraycolsep=2.5pt%
+\boldmath\(\bar{c} = \input{tex/c_denominator_with_noise}\),
+}
+\end{equation}
+and the constant terms \(a, \bar{a}\) are defined as \(a = \input{tex/numerator_constant_with_noise}\) and
+\(\bar{a} = \input{tex/denominator_constant_with_noise}\).
 
 \end{document}
