--- a/main.tex
+++ b/main.tex
@@ -59,11 +59,11 @@ of extortion and restricted memory.}
     Memory-one strategies are a set of Iterated Prisoner's Dilemma strategies
     that have been praised for their mathematical tractability and performance
     against single opponents. This manuscript investigates
-    \textit{best response} memory-one strategies with a theory of mind about
-    their opponents. Our results add to the literature that has shown that
+    \textit{best response} memory-one strategies with a theory of mind for
+    their opponents. The results add to the literature that has shown that
     extortionate play is not always optimal by showing that optimal play is
     often not extortionate.
-    We
+    They
     also provide evidence that memory-one strategies suffer from their limited
     memory in multi agent interactions and can be out performed by
     optimised strategies with longer memory.
@@ -114,25 +114,25 @@ evolutionary dynamics has been questioned~\cite{adami2013, Hilbe2013b,
 Hilbe2013, Hilbe2015, Knight2018, Harper2015}.
 
 The purpose of this work is to reinforce the literature on the limitations of
-extortionate strategies by considering new approaches. More specifically, by
-considering best response memory-one strategies with a theory of mind about
+extortionate strategies by considering a new approach. More specifically, by
+considering best response memory-one strategies with a theory of mind of
 their opponents. There are several works in the literature that have considered
-strategies with a theory of mind~\cite{Han2011, Han2012, De2013, Devaine2014,
-Stewart2012, Press2012}. These works defined ``theory of mind'' as intention
+strategies with a theory of mind~\cite{Han2011, De2013, Devaine2014, Han2012,
+Press2012, Stewart2012}. These works defined ``theory of mind'' as intention
 recognition~\cite{Han2011, Han2012, De2013, Devaine2014} and as the ability of a
 strategy to realise that their actions can influence
 opponents~\cite{Stewart2012}. Compared to these works, theory of mind is defined
 here as the ability of a strategy to know the behaviour of their opponents
 and alter their own behaviour in response to that.
 
-This work presents a closed form algebraic expression for the utility of a
-memory-one strategy against a given set of opponents, a compact method of
-identifying it's best response to that given set of opponents essentially: a
-theory of mind. The aim is to evaluate whether a best response memory-one
+We present a closed form algebraic expression for the utility of a
+memory-one strategy against a given set of opponents and a compact method of
+identifying it's best response to that given set of opponents.
+The aim is to evaluate whether a best response memory-one
 strategy behaves in a zero-determinant way which in turn indicates whether it
 can be extortionate. We do this using a linear algebraic approach presented
-in~\cite{Knight2019}. This is done in tournaments with and without self
-interactions. Moreover, we introduce a framework that allows the comparison of
+in~\cite{Knight2019}. This is done in tournaments with two opponents.
+Moreover, we introduce a framework that allows the comparison of
 an optimal memory-one strategy and an optimised strategy which has a larger
 memory.
 
@@ -177,7 +177,7 @@ Eq.~\ref{eq:press_dyson_utility}.
     u_q(p) = v \cdot (R, S, T, P).
 \end{equation}
 
-This manuscript has explored the form of \(u_q(p)\), to the authors knowledge no
+This manuscript has explored the form of \(u_q(p)\), to the best of the authors knowledge no
 previous work has done this, and Theorem~\ref{theorem_one} states that \(u_q(p)\) is given by a ratio
 of two quadratic forms~\cite{kepner2011}.
 
@@ -238,12 +238,12 @@ against \(N\) opponents is given by:
        {\prod\limits_{i=1} ^ N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}.
 \end{align}
 
-Eq.~(\ref{eq:tournament_utility}) is the average score (using Eq.~(\ref{eq:optimisation_quadratic})) against the set of opponents.
+Eq.~\ref{eq:tournament_utility} is the average score (using Eq.~\ref{eq:optimisation_quadratic}) against the set of opponents.
 
 Estimating the utility of a memory-one strategy against any number of opponents
 without simulating the interactions is the main result used in the rest of this manuscript.
 It will be used to obtain best response memory-one strategies in tournaments
-with and without self interactions in order to explore the limitations of extortion
+in order to explore the limitations of extortion
 and restricted memory.
 
 \section{Results}\label{section:results}
@@ -334,7 +334,7 @@ becomes intractable. As a result, best responses will be estimated
 heuristically using a numerical method, suitable for problems with local optima,
 called Bayesian optimisation~\cite{Mokus1978}.
 
-\subsection{Limitations of extortionate behaviour} %TODO check that this is a good title
+\subsection{Limitations of extortionate behaviour}
 
 In multi opponent settings,
 where the payoffs matter, strategies trying to exploit their opponents will
@@ -405,7 +405,7 @@ distribution is given in Table~\ref{table:sserror_stats}.
 
 \begin{figure}[!htbp]
     \begin{center}
-        \includegraphics[width=.65\linewidth]{img/best_respones_sserror.pdf}
+        \includegraphics[width=.5\linewidth]{img/best_respones_sserror.pdf}
     \end{center}
     \caption{SEE distribution for best response in tournaments without self interactions.}\label{fig:sse_distributions}
 \end{figure}
@@ -417,7 +417,7 @@ response is not uniformly a ZDs. A positive measure of skewness and kurtosis,
 and a mean of 0.34 indicate a heavy tail to the right. Therefore, in several
 cases the strategy is not trying to extort its opponents.
 
-\subsection{Limitations of memory size} %TODO check that this is a good title
+\subsection{Limitations of memory size}
 
 The other main finding presented in~\cite{Press2012} was that
 short memory of the strategies was all that was needed.
@@ -454,7 +454,7 @@ of Gambler, and actual simulated players are used. This is done using~\cite{axel
 with 500 turns and 200 repetitions, moreover, Eq. \ref{eq:gambler_optimisation}
 is solved numerically using Bayesian optimisation.
 
-Similarly to previous sections, a large data set has been generated with
+Similarly to the previous section, a large data set has been generated with
 instances of an optimal Gambler and a memory-one best response, available
 at~\cite{glynatsi2019}. Estimating a best response Gambler (17 dimensions) is
 computational more expensive compared to a best response memory-one (4
@@ -477,11 +477,9 @@ shorter memory is limiting.
     \includegraphics[width=.5\textwidth]{img/gambler_performance_against_mem_one.pdf}
     \caption{The ratio between the utilities of Gambler and best response memory-one
     strategy for 152 different pair of opponents.}\label{fig:utilities_gambler_mem_one}
-    % TODO Nik: a legend for the lines or a description of the lines in the
-    % caption?
 \end{figure}
 
-\subsection{Dynamic best response player} %TODO check that this is a good title
+\subsection{Dynamic best response player}
 
 In several evolutionary settings
 such as Moran Processes self interactions are key. Previous work has
@@ -538,13 +536,12 @@ To evaluate the formulation proposed here the best response player (taken to be
 the first type of individual in our population)  will be allowed to act
 dynamically: adjusting their probability vector at every generation. In essence
 using the theory of mind to find the best response to not only the opponent but
-also the distribution of the population.  Thus for every value of \(K\) there is
+also the distribution of the population. Thus for every value of \(K\) there is
 a different best response player.
 
 Considering the dynamic best response player as a vector
 \(p\in\mathbb{R}^4_{[0, 1]}\) and the opponent as a vector
-\(q\in\mathbb{R}^4_{[0, 1]}\).
-In the case of the best response player the transition probabilities depend on
+\(q\in\mathbb{R}^4_{[0, 1]}\), the transition probabilities depend on
 the payoff matrix \(A ^ {(K)}\) where:
 
 \begin{itemize}
@@ -554,12 +551,13 @@ the payoff matrix \(A ^ {(K)}\) where:
     \item \(A ^ {(K)}_{11}=u_{q}(q)\) is the long run utility of the opponent against itself.
 \end{itemize}
 
-For every value of \(K\) the best response dynamics algorithm is used to
+The matrix \(A ^ {(K)}\) is calculated using Eq.~\ref{eq:optimisation_quadratic}.
+For every value of \(K\) the best response dynamics algorithm
+(Algorithm~\ref{algo:best_response_dynamics})
+is used to
 calculate the best response player.
-The matrix \(A ^ {(K)}\) is calculated using Eq.
-(\ref{eq:optimisation_quadratic}).
 
-Using this, the total utilities/fitnesses for each player can be written down:
+The total utilities/fitnesses for each player can be written down:
 
 \[f_1^{(K)} = (K - 1) A_{11}^{(K)} + (n - K)A_{12}^{(K)}\]
 
@@ -1001,8 +999,8 @@ Theorem~\ref{theorem_one}, is a condition for which in an
 environment of memory-one opponents defection is the stable choice, based only
 on the coefficients of the opponents.
 
-This result is obtained by evaluating the sign of Equation
-(\ref{eq:tournament_utility})'s derivative at \(p=(0, 0, 0, 0)\). If at that
+This result is obtained by evaluating the sign of Eq.
+\ref{eq:tournament_utility}'s derivative at \(p=(0, 0, 0, 0)\). If at that
 point the derivative is negative, then the utility of a player only decreases if
 they were to change their behaviour, and thus defection at that point is stable.
 
