last rewrites by n.g.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -602,3 +602,36 @@ author = "Matsui, Akihiko",
   year={2015},
   publisher={Nature Publishing Group}
 }
+
+@article{Imhof2007,
+  title={Tit-for-tat or win-stay, lose-shift?},
+  author={Imhof, Lorens A and Fudenberg, Drew and Nowak, Martin A},
+  journal={Journal of theoretical biology},
+  volume={247},
+  number={3},
+  pages={574--580},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{Boyd1989,
+  title={Mistakes allow evolutionary stability in the repeated prisoner's dilemma game},
+  author={Boyd, Robert},
+  journal={Journal of theoretical Biology},
+  volume={136},
+  number={1},
+  pages={47--56},
+  year={1989},
+  publisher={Elsevier}
+}
+
+@article{Wu1995,
+  title={How to cope with noise in the iterated prisoner's dilemma},
+  author={Wu, Jianzhong and Axelrod, Robert},
+  journal={Journal of Conflict resolution},
+  volume={39},
+  number={1},
+  pages={183--189},
+  year={1995},
+  publisher={Sage Periodicals Press 2455 Teller Road, Thousand Oaks, CA 91320}
+}
