Make minor changes
Take a look at these @nikoleta-v3 as I specifically remove one addition you made - we can chat about that during our meeting (the other changes I'm just fixing the language).

--- a/main.tex
+++ b/main.tex
@@ -68,10 +68,11 @@ of extortion and restricted memory.}
     memory in multi agent interactions and can be out performed by
     optimised strategies with longer memory.
     We have developed a theory that has allowed to explore the the entire
-    space of memory-one strategies. The frame work presented in suitable to
-    study memory-one strategies in the inifite Prisoner's Dilemma, but to also
-    study evolutionary processes such as Moran process, the Prisoner's Dilemma
-    with noise and the stability of defection in populations of memory-one strategies.
+    space of memory-one strategies. The framework presented is suitable to
+    study memory-one strategies in the Prisoner's Dilemma, but also
+    in evolutionary processes such as the Moran process,
+    Furthermore, results on the stability of defection in populations of 
+    memory-one strategies are also obtained.
 \end{abstract}
 
 The Prisoner's Dilemma (PD) is a two player game used in understanding the
@@ -420,8 +421,7 @@ distribution of SSE is skewed to the left, indicating that the best response
 does exhibit ZDs behaviour and so could be extortionate, however, the best
 response is not uniformly a ZDs. A positive measure of skewness and kurtosis,
 and a mean of 0.34 indicate a heavy tail to the right. Therefore, in several
-cases the strategy is not trying to extort its opponents. This exhibit that
-the best response strategy's behaviour is more adaptable than that of a ZDs.
+cases the strategy is not trying to extort its opponents. 
 
 \subsection{Limitations of memory size}
 
@@ -659,7 +659,7 @@ stability of optimal behaviour in evolutionary settings.
 In the interactions we have considered here the players do not make mistakes; their
 actions were executed with perfect accuracy. Mistakes, however, are relevant in
 the reasearch of repeated games~\cite{Boyd1989, Imhof2007, Nowak1993, Wu1995}. In
-future work we would consider interactions with ``noise''. Noise can be easily
+future work we would consider interactions with ``noise''. Noise can be
 incoroporated into our formulation and it can be shown that the utility remains a ratio
 of quadratic forms (Details see Appendix~\ref{appendix:noise}).
 
